<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, PhotoIntentActivity!</string>
    <string name="app_name">PhotoByIntent</string>
    <string name="btnIntendS">Take Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    
    <string name="album_name">CameraSample</string>
    <string name="menu_settings">Settings</string>
    
    <string name="photoDescription">Photo Description</string>
    <string name="note">type notes here</string>
    <string name="projectNameLabel">Project Name</string>
    <string name="stepNameLabel">Step</string>
    <string name="tagNameLabel">Tags</string>
    <string name="share">Share</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
     <string name="editNameHint">type new project name</string>
    
    <string-array name="projectNameArray">
        <item>Programmable Music Box</item>
        <item>+New</item>        
    </string-array>
    
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    
    
    <string-array name="projectStepArray">
        <item>Sketching the music box</item>
        <item>+New</item>        
    </string-array>
    
    <string name="title_activity_share_photo">SharePhotoActivity</string>

</resources>