<?xml version="1.0" encoding="utf-8"?>
 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FAFAFA" >
    
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:padding="6dip"	 
	    android:background="#6E6E6E"   >

		<TextView
		    android:id="@+id/photoDescription"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/photoDescription"
		    android:textAppearance="?android:attr/textAppearanceLarge"
		    android:textColor="#FFFFFF" />
	    
    </LinearLayout>

    	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:padding="6dip"	  >
		
    	    <LinearLayout
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:background="#E0F8F7"
    	        android:orientation="horizontal"
    	        android:padding="6dip" >
	
		    <ImageView
		            android:id="@+id/projectImage"
		            android:layout_width="120dp"
		            android:layout_height="90dp"
		         />
		
		    <EditText
		        android:id="@+id/projectNotes"
		        android:layout_width="0dp"
		        android:layout_height="90dp"
		        android:layout_weight="1"
		        android:ems="1"
		        android:gravity="top"
		        android:hint="@string/note"
		        android:inputType="textMultiLine"
		        android:minLines="3"
		        android:textColor="#000000" />

		        <requestFocus />

	</LinearLayout>
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="6dip"
	     >

		<TextView
		    android:id="@+id/projectName"
		    android:textSize="15dip"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/projectNameLabel"
		    android:textColor="#000000" />

		<Spinner
		    android:id="@+id/projectNameSpinner"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:prompt="@array/projectNameArray" />

	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="6dip"
	     >

		<TextView
		    android:id="@+id/stepName"
		    android:textSize="15dip"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/stepNameLabel"
		    android:textColor="#000000" />

		<Spinner
		    android:id="@+id/projectStepSpinner"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="top|left" />

	</LinearLayout>
	
   
 	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="6dip"
	     >

		<TextView
		    android:id="@+id/tagName"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/tagNameLabel"
		    android:textColor="#000000"
		    android:textSize="15dip" />

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="#E0F8F7"
		    android:orientation="horizontal"
		    android:padding="6dip" >

			<ImageView
			    android:id="@+id/buildIcon"
			    android:layout_weight="1"
			    android:layout_width="wrap_content"
			    android:layout_height="50dp"
			    android:src="@drawable/build_icon" />
			
			<ImageView
			    android:id="@+id/electronicsIcon"
			    android:layout_weight="1"
			    android:layout_width="wrap_content"
			    android:layout_height="50dp"
			    android:src="@drawable/electronics_icon" />
			
			<ImageView
			    android:id="@+id/programmingIcon"
			    android:layout_weight="1"
			    android:layout_width="wrap_content"
			    android:layout_height="50dp"
			    android:src="@drawable/programming_icon" />

		</LinearLayout>

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="#E0F8F7"
		    android:orientation="horizontal" >
			
			<FrameLayout 
	        	android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
	        	android:layout_gravity="center"
	        	android:layout_weight="25" > 
	        
	        	<CheckBox
	        	    android:id="@+id/buildCheckBox"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:layout_gravity="center"
	        	    android:fadingEdge="none"
	        	    android:padding="5dp"
	        	    android:textColor="#000000" />
 
			</FrameLayout> 
		    
			<FrameLayout 
	        	android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
	        	android:layout_gravity="center"
	        	android:layout_weight="25"> 
	        
	        	<CheckBox 
	                android:layout_width="wrap_content" 
					android:layout_height="wrap_content" 
	                android:layout_gravity="center" 
	                android:padding="5dp"
	                android:id="@+id/electronicsCheckBox"/> 
			</FrameLayout> 
			
			<FrameLayout 
	        	android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
	        	android:layout_gravity="center"
	        	android:layout_weight="25"> 
	        
	        	<CheckBox 
	                android:layout_width="wrap_content" 
					android:layout_height="wrap_content" 
	                android:layout_gravity="center" 
	                android:padding="5dp"
	                android:id="@+id/programmingCheckBox"/> 
			</FrameLayout> 


		</LinearLayout>
		
		
	</LinearLayout>

 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="vertical" >

 		<Button
 		    android:id="@+id/button1"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_gravity="center_horizontal"
 		    android:text="@string/share"
 		    android:textColor="#000000"
 		    android:textColorHint="#000000"
 		    android:textSize="20dp" />

 	</LinearLayout>
	
</LinearLayout>
